--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
             <option value="">-- Select --</option>
             <option value="original">Original Dark</option>
             <option value="light">Light Theme</option>
+            <option value="blender_dark">Blender Dark</option>
+            <option value="blender_light">Blender Light</option>
+            <option value="vscode_dark">VS Code Dark</option>
+            <option value="vscode_light">VS Code Light</option>
+            <option value="solarized_dark">Solarized Dark</option>
+            <option value="solarized_light">Solarized Light</option>
+            <option value="dracula">Dracula</option>
+            <option value="nord">Nord</option>
+            <option value="gruvbox_dark">Gruvbox Dark</option>
+            <option value="monokai">Monokai</option>
+            <option value="one_dark">One Dark</option>
             <option value="random">Random Colors</option>
         </select>
     </div>
