--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <option value="">-- Select --</option>
             <option value="original">Original Dark</option>
             <option value="light">Light Theme</option>
-            <option value="blender_dark">Blender Dark</option>
-            <option value="blender_light">Blender Light</option>
+            <option value="ms_office_dark">MS Office Dark</option>
+            <option value="ms_office_light">MS Office Light</option>
             <option value="vscode_dark">VS Code Dark</option>
             <option value="vscode_light">VS Code Light</option>
             <option value="solarized_dark">Solarized Dark</option>
@@ -26,6 +26,8 @@
             <option value="gruvbox_dark">Gruvbox Dark</option>
             <option value="monokai">Monokai</option>
             <option value="one_dark">One Dark</option>
+            <option value="windows_95">Windows 95</option>
+            <option value="cyberpunk">Cyberpunk</option>
             <option value="random">Random Colors</option>
         </select>
     </div>
