--- a/index.html
+++ b/index.html
@@ -7,31 +7,36 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>ToolColorTable Editor</h1>
-    <p>Edit the colors below using the color pickers. Use batch editors for grouped changes. Click "Export" to download the modified file.</p>
+    <header>
+        <div class="header-container">
+            <h1 data-i18n="title">ToolColorTable Editor</h1>
+            <button id="languageToggle" data-i18n="toggleLanguage">日本語</button>
+        </div>
+    </header>
+    <p data-i18n="description">Edit the colors below using the color pickers. Use batch editors for grouped changes. Click "Export" to download the modified file.</p>
     <div id="presets">
-        <label for="presetSelect">Select Preset Theme:</label>
+        <label for="presetSelect" data-i18n="presetLabel">Select Preset Theme:</label>
         <select id="presetSelect">
             <option value="">-- Select --</option>
-            <option value="original">Original Dark</option>
-            <option value="light">Light Theme</option>
-            <option value="ms_office_dark">MS Office Dark</option>
-            <option value="ms_office_light">MS Office Light</option>
-            <option value="vscode_dark">VS Code Dark</option>
-            <option value="vscode_light">VS Code Light</option>
-            <option value="solarized_dark">Solarized Dark</option>
-            <option value="solarized_light">Solarized Light</option>
-            <option value="dracula">Dracula</option>
-            <option value="nord">Nord</option>
-            <option value="gruvbox_dark">Gruvbox Dark</option>
-            <option value="monokai">Monokai</option>
-            <option value="one_dark">One Dark</option>
-            <option value="windows_95">Windows 95</option>
-            <option value="cyberpunk">Cyberpunk</option>
-            <option value="random">Random Colors</option>
+            <option value="original" data-i18n="presetOriginal">Original Dark</option>
+            <option value="light" data-i18n="presetLight">Light Theme</option>
+            <option value="ms_office_dark" data-i18n="presetMSOfficeDark">MS Office Dark</option>
+            <option value="ms_office_light" data-i18n="presetMSOfficeLight">MS Office Light</option>
+            <option value="vscode_dark" data-i18n="presetVSCodeDark">VS Code Dark</option>
+            <option value="vscode_light" data-i18n="presetVSCodeLight">VS Code Light</option>
+            <option value="solarized_dark" data-i18n="presetSolarizedDark">Solarized Dark</option>
+            <option value="solarized_light" data-i18n="presetSolarizedLight">Solarized Light</option>
+            <option value="dracula" data-i18n="presetDracula">Dracula</option>
+            <option value="nord" data-i18n="presetNord">Nord</option>
+            <option value="gruvbox_dark" data-i18n="presetGruvboxDark">Gruvbox Dark</option>
+            <option value="monokai" data-i18n="presetMonokai">Monokai</option>
+            <option value="one_dark" data-i18n="presetOneDark">One Dark</option>
+            <option value="windows_95" data-i18n="presetWindows95">Windows 95</option>
+            <option value="cyberpunk" data-i18n="presetCyberpunk">Cyberpunk</option>
+            <option value="random" data-i18n="presetRandom">Random Colors</option>
         </select>
     </div>
-    <h2>Batch Editors</h2>
+    <h2 data-i18n="batchEditors">Batch Editors</h2>
     <div id="batches"></div>
     <div class="container">
         <div id="editor"></div>
@@ -39,7 +44,11 @@
             <img id="preview" src="" alt="Preview Image">
         </div>
     </div>
-    <button id="export">Export File</button>
+    <button id="export" data-i18n="export">Export File</button>
+    <section id="install-instructions">
+        <h2 data-i18n="installTitle">How to Install</h2>
+        <p data-i18n="installInstructions">To use the customized ToolColorTable, place the downloaded <code>ToolColorTable.txt</code> file into your <code>Program Files (x86)\Steam\steamapps\common\BAKIN\lib\sysresource</code> folder.</p>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
