--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
             <option value="" disabled selected>-- Select --</option>
             <option value="original" data-i18n="presetOriginal">Original Dark</option>
             <option value="light" data-i18n="presetLight">Light Theme</option>
-            <option value="msOfficeDark" data-i18n="presetMSOfficeDark">MS Office Dark</option>
-            <option value="msOfficeLight" data-i18n="presetMSOfficeLight">MS Office Light</option>
-            <option value="vsCodeDark" data-i18n="presetVSCodeDark">VS Code Dark</option>
-            <option value="vsCodeLight" data-i18n="presetVSCodeLight">VS Code Light</option>
-            <option value="solarizedDark" data-i18n="presetSolarizedDark">Solarized Dark</option>
-            <option value="solarizedLight" data-i18n="presetSolarizedLight">Solarized Light</option>
+            <option value="ms_office_dark" data-i18n="presetMSOfficeDark">MS Office Dark</option>
+            <option value="ms_office_light" data-i18n="presetMSOfficeLight">MS Office Light</option>
+            <option value="vscode_dark" data-i18n="presetVSCodeDark">VS Code Dark</option>
+            <option value="vscode_light" data-i18n="presetVSCodeLight">VS Code Light</option>
+            <option value="solarized_dark" data-i18n="presetSolarizedDark">Solarized Dark</option>
+            <option value="solarized_light" data-i18n="presetSolarizedLight">Solarized Light</option>
             <option value="dracula" data-i18n="presetDracula">Dracula</option>
             <option value="nord" data-i18n="presetNord">Nord</option>
-            <option value="gruvboxDark" data-i18n="presetGruvboxDark">Gruvbox Dark</option>
+            <option value="gruvbox_dark" data-i18n="presetGruvboxDark">Gruvbox Dark</option>
             <option value="monokai" data-i18n="presetMonokai">Monokai</option>
-            <option value="oneDark" data-i18n="presetOneDark">One Dark</option>
-            <option value="windows95" data-i18n="presetWindows95">Windows 95</option>
+            <option value="one_dark" data-i18n="presetOneDark">One Dark</option>
+            <option value="windows_95" data-i18n="presetWindows95">Windows 95</option>
             <option value="cyberpunk" data-i18n="presetCyberpunk">Cyberpunk</option>
             <option value="random" data-i18n="presetRandom">Random Colors</option>
         </select>
