--- a/index.html
+++ b/index.html
@@ -13,78 +13,88 @@
             <button id="languageToggle" data-i18n="toggleLanguage">日本語</button>
         </div>
     </header>
-    <main>
-        <p data-i18n="description">Edit the colors below using the color pickers. Use batch editors for grouped changes. Click "Export" to download the modified file.</p>
-        <div id="presets">
-            <label data-i18n="presetLabel">Select Preset Theme:</label>
-            <select id="presetSelect">
-                <option value="" disabled selected>-- Select --</option>
-                <option value="original" data-i18n="presetOriginal">Original Dark</option>
-                <option value="light" data-i18n="presetLight">Light Theme</option>
-                <option value="ms_office_dark" data-i18n="presetMSOfficeDark">MS Office Dark</option>
-                <option value="ms_office_light" data-i18n="presetMSOfficeLight">MS Office Light</option>
-                <option value="vscode_dark" data-i18n="presetVSCodeDark">VS Code Dark</option>
-                <option value="vscode_light" data-i18n="presetVSCodeLight">VS Code Light</option>
-                <option value="solarized_dark" data-i18n="presetSolarizedDark">Solarized Dark</option>
-                <option value="solarized_light" data-i18n="presetSolarizedLight">Solarized Light</option>
-                <option value="dracula" data-i18n="presetDracula">Dracula</option>
-                <option value="nord" data-i18n="presetNord">Nord</option>
-                <option value="gruvbox_dark" data-i18n="presetGruvboxDark">Gruvbox Dark</option>
-                <option value="monokai" data-i18n="presetMonokai">Monokai</option>
-                <option value="one_dark" data-i18n="presetOneDark">One Dark</option>
-                <option value="windows_95" data-i18n="presetWindows95">Windows 95</option>
-                <option value="cyberpunk" data-i18n="presetCyberpunk">Cyberpunk</option>
-                <option value="random" data-i18n="presetRandom">Random Colors</option>
-            </select>
-        </div>
-        <div id="batches" data-i18n="batchEditors">Batch Editors</div>
-        <div class="container">
-            <div id="editor"></div>
-            <div id="preview-container">
-                <div id="preview" class="bakin-preview">
-                    <div class="top-bar">
-                        <span>Map Editor - help_rv1035</span>
-                        <span class="buttons">File Edit View Functions Test Play Help</span>
-                    </div>
-                    <div class="main-content">
-                        <div class="left-panel">
-                            <div class="panel-header">Map List</div>
-                            <div class="list-item selected">Map_1</div>
-                            <div class="list-item">Common Event</div>
-                        </div>
-                        <div class="center-panel">
-                            <div class="tabs">
-                                <div class="tab unselected">Terrains</div>
-                                <div class="tab selected">3D Stamps</div>
-                                <div class="tab unselected">2D Stamps</div>
-                            </div>
-                            <div class="resource-list">
-                                <div class="group-header">Reserved</div>
-                                <div class="item">For Event Templates</div>
-                                <div class="item selected">Water Surface</div>
-                            </div>
-                            <div class="preview-3d">3D View Area</div>
-                        </div>
-                        <div class="right-panel">
-                            <div class="panel-header">3D Stamp Properties</div>
-                            <div class="properties">
-                                <div class="property-group">Basic</div>
-                                <div class="property">Name: Water Surface 2</div>
-                                <div class="property selected">Graphic Name: sb_obj_Water</div>
-                                <div class="property disabled">Disabled Property</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="status-bar">Manage all materials used in the game...</div>
+
+    <p data-i18n="description">
+        Edit the colors below using the color pickers. Use batch editors for grouped changes. Click "Export" to download the modified file.
+    </p>
+
+    <div id="presets">
+        <label data-i18n="presetLabel">Select Preset Theme:</label>
+        <select id="presetSelect">
+            <option value="" selected disabled>-- Select --</option>
+            <option value="original" data-i18n="presetOriginal">Original Dark</option>
+            <option value="light" data-i18n="presetLight">Light Theme</option>
+            <option value="ms_office_dark" data-i18n="presetMSOfficeDark">MS Office Dark</option>
+            <option value="ms_office_light" data-i18n="presetMSOfficeLight">MS Office Light</option>
+            <option value="vscode_dark" data-i18n="presetVSCodeDark">VS Code Dark</option>
+            <option value="vscode_light" data-i18n="presetVSCodeLight">VS Code Light</option>
+            <option value="solarized_dark" data-i18n="presetSolarizedDark">Solarized Dark</option>
+            <option value="solarized_light" data-i18n="presetSolarizedLight">Solarized Light</option>
+            <option value="dracula" data-i18n="presetDracula">Dracula</option>
+            <option value="nord" data-i18n="presetNord">Nord</option>
+            <option value="gruvbox_dark" data-i18n="presetGruvboxDark">Gruvbox Dark</option>
+            <option value="monokai" data-i18n="presetMonokai">Monokai</option>
+            <option value="one_dark" data-i18n="presetOneDark">One Dark</option>
+            <option value="windows_95" data-i18n="presetWindows95">Windows 95</option>
+            <option value="cyberpunk" data-i18n="presetCyberpunk">Cyberpunk</option>
+            <option value="random" data-i18n="presetRandom">Random Colors</option>
+        </select>
+    </div>
+
+    <h2 data-i18n="batchEditors">Batch Editors</h2>
+    <div id="batches"></div>
+
+    <div class="container">
+        <div id="editor"></div>
+        <div id="preview-container">
+            <div id="preview" class="bakin-preview">
+                <div class="top-bar" data-color="SBEditorFormCaptionBackColor" data-foreground="SBEditorFormCaptionForeColor">
+                    <span>Map Editor - help_rv1035</span>
+                    <span class="buttons">File Edit View Functions Test Play Help</span>
                 </div>
+                <div class="main-content">
+                    <div class="left-panel" data-color="PropertyBackColor">
+                        <div class="panel-header" data-color="SBCaptionBarBackColor" data-foreground="SBCaptionBarForeColor">Map List</div>
+                        <div class="list-item" data-color="BackPropertyBase" data-foreground="ForePropertyText">Map_1</div>
+                        <div class="list-item selected" data-color="BackPropertySelection" data-foreground="ForePropertySelection">Common Event</div>
+                    </div>
+                    <div class="center-panel">
+                        <div class="tabs">
+                            <div class="tab unselected" data-color="OnButton" data-foreground="ForeText">Terrains</div>
+                            <div class="tab selected" data-color="PressedButton" data-foreground="ForeText">3D Stamps</div>
+                            <div class="tab unselected" data-color="OnButton" data-foreground="ForeText">2D Stamps</div>
+                        </div>
+                        <div class="resource-list" data-color="ListViewBackColor">
+                            <div class="group-header" data-color="BackPropertyGroup" data-foreground="ForePropertyGroup">Reserved</div>
+                            <div class="item" data-color="BackMasterMenuBase" data-foreground="ForeMasterMenuText">For Event Templates</div>
+                            <div class="item selected" data-color="BackMasterMenuBase" data-foreground="ForeMasterMenuSelection">Water Surface</div>
+                        </div>
+                        <div class="preview-3d" data-color="FlowchartNormalBackColor">3D View Area</div>
+                    </div>
+                    <div class="right-panel" data-color="Back">
+                        <div class="panel-header" data-color="SBCaptionBarBackColor" data-foreground="SBCaptionBarForeColor">3D Stamp Properties</div>
+                        <div class="properties" data-color="SBTextBoxBackColor">
+                            <div class="property-group" data-color="BackPropertyGroup" data-foreground="ForePropertyGroup">Basic</div>
+                            <div class="property" data-color="BackPropertyBase" data-foreground="ForePropertyText">Name: Water Surface 2</div>
+                            <div class="property" data-color="BackPropertyBase" data-foreground="ForePropertyText">Graphic Name: sb_obj_Water</div>
+                            <div class="property disabled" data-color="BackPropertyBase" data-foreground="DisableText">Disabled Property</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="status-bar" data-color="SBEditorFormStatusBackColor" data-foreground="TelopColor">Manage all materials used in the game...</div>
             </div>
         </div>
-        <button id="export" data-i18n="export">Export File</button>
-        <div id="install-instructions">
-            <h2 data-i18n="installTitle">How to Install</h2>
-            <p data-i18n="installInstructions">To use the customized theme, place the downloaded <code>ToolColorTable.txt</code> file into your <code>Program Files (x86)\Steam\steamapps\common\BAKIN\lib\sysresource</code> folder. This overrides the dark theme, so make sure to make a backup of the file first.</p>
-        </div>
-    </main>
+    </div>
+
+    <button id="export" data-i18n="export">Export File</button>
+
+    <div id="install-instructions">
+        <h2 data-i18n="installTitle">How to Install</h2>
+        <p data-i18n="installInstructions">
+            To use the customized theme, place the downloaded <code>ToolColorTable.txt</code> file into your <code>Program Files (x86)\Steam\steamapps\common\BAKIN\lib\sysresource</code> folder. This overrides the dark theme, so make sure to make a backup of the file first.
+        </p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
