new themes added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             <option value="one_dark" data-i18n="presetOneDark">One Dark</option>
             <option value="windows_95" data-i18n="presetWindows95">Windows 95</option>
             <option value="cyberpunk" data-i18n="presetCyberpunk">Cyberpunk</option>
+            <option value="ocean_breeze" data-i18n="presetOceanBreeze">Ocean Breeze</option>
+            <option value="sunset_glow" data-i18n="presetSunsetGlow">Sunset Glow</option>
             <option value="random" data-i18n="presetRandom">Random Colors</option>
         </select>
     </div>
