more themes added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
             <option value="cyberpunk" data-i18n="presetCyberpunk">Cyberpunk</option>
             <option value="ocean_breeze" data-i18n="presetOceanBreeze">Ocean Breeze</option>
             <option value="sunset_glow" data-i18n="presetSunsetGlow">Sunset Glow</option>
+            <option value="forest_mist" data-i18n="presetForestMist">Forest Mist</option>
+            <option value="desert_sun" data-i18n="presetDesertSun">Desert Sun</option>
+            <option value="midnight_sky" data-i18n="presetMidnightSky">Midnight Sky</option>
+            <option value="autumn_haze" data-i18n="presetAutumnHaze">Autumn Haze</option>
+            <option value="polar_night" data-i18n="presetPolarNight">Polar Night</option>
+            <option value="coral_reef" data-i18n="presetCoralReef">Coral Reef</option>
+            <option value="lavender_fields" data-i18n="presetLavenderFields">Lavender Fields</option>
+            <option value="golden_harvest" data-i18n="presetGoldenHarvest">Golden Harvest</option>
+            <option value="stormy_seas" data-i18n="presetStormySeas">Stormy Seas</option>
+            <option value="emerald_city" data-i18n="presetEmeraldCity">Emerald City</option>
             <option value="random" data-i18n="presetRandom">Random Colors</option>
         </select>
     </div>
