added placeholder themes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
             <option value="intellij_idea" data-i18n="presetIntelliJ">IntelliJ IDEA</option>
             <option value="sublime_text" data-i18n="presetSublimeText">Sublime Text</option>
             <option value="photoshop" data-i18n="presetPhotoshop">Photoshop</option>
+            <option value="canva" data-i18n="presetCanva">Canva</option>
+            <option value="trello" data-i18n="presetTrello">Trello</option>
+            <option value="figma" data-i18n="presetFigma">Figma</option>
+            <option value="notion" data-i18n="presetNotion">Notion</option>
+            <option value="slack" data-i18n="presetSlack">Slack</option>
+            <option value="airtable" data-i18n="presetAirtable">Airtable</option>
+            <option value="miro" data-i18n="presetMiro">Miro</option>
+            <option value="asana" data-i18n="presetAsana">Asana</option>
             <option value="random" data-i18n="presetRandom">Random Colors</option>
         </select>
     </section>
